--- a/Guess Who/MainStoryboard.storyboard
+++ b/Guess Who/MainStoryboard.storyboard
@@ -12,6 +12,10 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" image="background-paper.png" id="vd7-Wz-Hjo">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="553"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="05A-PZ-Igw">
                                 <rect key="frame" x="40" y="141" width="241" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -360,8 +364,47 @@
         </scene>
     </scenes>
     <resources>
+        <image name="background-paper.png" width="640" height="1156"/>
         <image name="error_image_disabled.png" width="256" height="256"/>
     </resources>
+    <classes>
+        <class className="HighscoresTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/HighscoresTableViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="backButtonPressed:"/>
+            </relationships>
+        </class>
+        <class className="MainMenuViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MainMenuViewController.h"/>
+        </class>
+        <class className="PlaySessionViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlaySessionViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="answerButtonPressed:" candidateClass="UIButton"/>
+                <relationship kind="action" name="answerButtonTouchDown"/>
+                <relationship kind="action" name="nextButtonPressed:"/>
+                <relationship kind="outlet" name="answerFour" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="answerOne" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="answerThree" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="answerTwo" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="currentQuestionIndexLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="firstErrorImageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="questionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="scoreLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="secondErrorImageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="thirdErrorImageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="timeLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="SummaryViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SummaryViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="mainMenuButtonPressed:"/>
+                <relationship kind="outlet" name="longestStreakLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="scoreLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
